--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+        }
+    }
     compileSdkVersion 31
     buildToolsVersion "31.0.0"
 
@@ -14,14 +18,17 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.release
     }
 
     buildTypes {
         debug {
             buildConfigField 'String', 'SERVER_URL', '"http://' + getLocalIPv4() + ':8080"'
+            signingConfig signingConfigs.debug
         }
         release {
             buildConfigField 'String', 'SERVER_URL', '"https://muzkat-server.herokuapp.com"'
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
