--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Muzkat"
         android:usesCleartextTraffic="true">
-        <activity android:name=".AddFavGenreActivity"></activity>
+        <activity android:name=".AddFavGenreActivity" />
         <activity android:name=".AddFavAuthorActivity" />
         <activity
             android:name=".AddMusicActivity"
@@ -21,6 +21,7 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
